--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "termcoder",
-  "version": "1.0.0",
+  "name": "termcode",
+  "version": "0.2.0",
   "type": "module",
   "description": "Universal terminal coding agent with multi-provider AI support - Claude Code alternative",
   "keywords": ["ai", "coding", "terminal", "chatgpt", "openai", "claude-code", "anthropic", "xai", "google", "mistral", "cohere", "ollama"],
@@ -15,7 +15,7 @@
     "url": "https://github.com/dhrxv8/TermCoder/issues"
   },
   "bin": {
-    "termcoder": "dist/index.js"
+    "termcode": "dist/index.js"
   },
   "scripts": {
     "build": "tsc -p .",
@@ -24,21 +24,23 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "fast-glob": "^3.3.2",
-    "openai": "^4.58.1",
-    "yargs": "^17.7.2",
-    "undici": "^6.19.8",
     "inquirer": "^9.2.12",
     "keytar": "^7.9.0",
     "zod": "^3.22.4",
+    "fast-glob": "^3.3.2",
+    "openai": "^4.58.1",
     "@anthropic-ai/sdk": "^0.24.3",
     "@google/generative-ai": "^0.15.0",
-    "playwright": "^1.44.0"
+    "@mistralai/mistralai": "^0.4.0",
+    "cohere-ai": "^6.2.2",
+    "node-fetch": "^3.3.2",
+    "yargs": "^17.7.2",
+    "undici": "^6.19.8"
   },
   "devDependencies": {
+    "typescript": "^5.5.4",
     "@types/node": "^20.14.10",
     "@types/yargs": "^17.0.32",
-    "@types/inquirer": "^9.0.7",
-    "typescript": "^5.5.4"
+    "@types/inquirer": "^9.0.7"
   }
 }
