--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "termcode",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
   "description": "Universal terminal coding agent with multi-provider AI support - Claude Code alternative",
   "keywords": ["ai", "coding", "terminal", "chatgpt", "openai", "claude-code", "anthropic", "xai", "google", "mistral", "cohere", "ollama"],
@@ -15,8 +15,15 @@
     "url": "https://github.com/dhrxv8/TermCoder/issues"
   },
   "bin": {
-    "termcode": "./dist/index.js"
+    "termcode": "dist/index.js"
   },
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "USAGE_GUIDE.md",
+    "LICENSE",
+    "package.json"
+  ],
   "scripts": {
     "build": "tsc -p .",
     "dev": "tsc -w",
@@ -35,13 +42,7 @@
     "cohere-ai": "^6.2.2",
     "node-fetch": "^3.3.2",
     "yargs": "^17.7.2",
-    "undici": "^6.19.8",
-    "ink": "^4.4.1",
-    "react": "^18.2.0",
-    "ink-use-stdout-dimensions": "^1.0.5",
-    "ink-text-input": "^5.0.1",
-    "ink-select-input": "^5.0.0",
-    "ink-box": "^3.0.0"
+    "undici": "^6.19.8"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
