🚀 Release v0.4.0 - Major Architecture Upgrade
## 🏗️ Enterprise-Grade Advanced Features

### 🛡️ Enhanced Security System
- Advanced security sandbox with 30+ security rules and dynamic policy enforcement
- AI-powered anomaly detection for suspicious command patterns and threat analysis
- Multi-layered validation with credential leak detection and prevention
- Security violation tracking with detailed compliance reporting
- Real-time threat assessment and automated response mechanisms

### 🧠 Intelligent Error Recovery System
- Smart error recovery with 15+ error pattern recognition and automated solutions
- AI-powered suggestions with context awareness and learning from user behavior
- Pattern-based recovery with intelligent diagnosis and fix recommendations
- Learning system that continuously improves with usage patterns
- Context-aware recommendations based on project type and development workflow

### ⚡ Performance Monitoring & Optimization
- Real-time performance tracking across all AI providers with detailed metrics
- Resource usage monitoring with optimization suggestions and alerts
- Response time analytics with provider comparison and recommendations
- Automated performance alerts for threshold violations and anomalies
- Cost optimization recommendations based on usage patterns and provider performance

### 🔌 Advanced Plugin System
- Complete plugin architecture with lifecycle management and dependency resolution
- Marketplace integration for community extensions and plugin discovery
- Plugin API with secure execution environment and resource management
- Built-in plugin types for security scanning, code analysis, and workflow integration
- Dynamic plugin loading with hot-swapping and version management

### 💡 Enhanced CLI Intelligence
- Smart autocomplete with AI-powered command suggestions and context awareness
- Pattern learning from user behavior with intelligent command ranking
- Context-aware suggestions based on project analysis and development patterns

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "termcode",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "type": "module",
-  "description": "Enhanced universal terminal coding agent with advanced security, workspace management, and multi-provider AI support - Claude Code alternative",
-  "keywords": ["ai", "coding", "terminal", "chatgpt", "openai", "claude-code", "anthropic", "xai", "google", "mistral", "cohere", "ollama"],
+  "description": "Superior terminal AI coding agent with enterprise-grade security, intelligent error recovery, performance monitoring, and plugin system - Advanced Claude Code alternative",
+  "keywords": ["ai", "coding", "terminal", "chatgpt", "openai", "claude-code", "anthropic", "xai", "google", "mistral", "cohere", "ollama", "performance-monitoring", "security-sandbox", "plugin-system", "error-recovery", "smart-suggestions"],
   "author": "dhrxv8",
   "license": "MIT",
   "homepage": "https://github.com/dhrxv8/TermCoder#readme",
